--- a/2dApp/index.html
+++ b/2dApp/index.html
@@ -39,7 +39,62 @@
         <p id="showMood"></p>
     </div>
     <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js" type="application/javascript"></script>
+    <script>
+        // Currently these two are undefined, we will use Ethers to assign them values
+        let MoodContract = undefined;
+        let signer = undefined;
+        const MoodContractAddress = '0xdD870fA1b7C4700F2BD7f44238821C26f7392148';
+        const MoodContractABI = [
+            {
+                "inputs": [],
+                "name": "getMood",
+                "outputs": [{
+                    "internalType": "string",
+                    "name": "",
+                    "type": "string"
+                }],
+                "stateMutability": "view",
+                "type": "function"
+            },
+            {
+                "inputs": [{
+                    "internalType": "string",
+                    "name": "_mood",
+                    "type": "string"
+                }],
+                "name": "setMood",
+                "outputs": [],
+                "stateMutability": "nonpayable",
+                "type": "function"
+            }
+        ];
 
+        const provider = new ethers.providers.Web3Provider(window.ethereum, "sepolia");
+
+        provider.send("eth_requestAccounts", []).then(() => {
+            provider.listAccounts().then((accounts) => {
+                signer = provider.getSigner(accounts[0]);
+                MoodContract = new ethers.Contract(
+                    MoodContractAddress,
+                    MoodContractABI,
+                    signer
+                );
+            });
+        });
+
+
+        async function getMood() {
+            const mood = await MoodContract.getMood();
+            document.getElementById("showMood").innerText = `Your Mood: ${mood}`;
+            console.log(mood);
+        }
+
+        async function setMood() {
+            const mood = document.getElementById("mood").value;
+            await MoodContract.setMood(mood);
+        }
+
+    </script>
 </body>
 
 </html>
